fix scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -405,3 +405,24 @@ input {
 .saved{
   margin-left: 10px;
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #0F172A; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #1E293B;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #448AFB; 
+}
